修改用户管理页面

--- a/public/modules/mainManagement/index.html
+++ b/public/modules/mainManagement/index.html
@@ -1,6 +1,6 @@
 <div ng-controller="main" class="x-view-full" >
   <div class="x-project-header column blue">
-   <div id="x-project-title">本科生毕业及学位申请系统管理后台</div>
+   <div id="x-project-title">本科生毕业及学位申请系统</div>
    <div class="main-userName">
     <button id="userName" class="main-userName-button">{{currentUser}}</button>
    </div>
