--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <script src="./javascripts/common/plugins.js"></script></script>
     <script src="./index.js"></script>
 </head>
-<body>
+<body style="overflow-x: hidden;">
     <ui-view></ui-view>
     <div id="root" class="bgimg" ng-controller="root">
 </body>
